--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   <div class="bio-description">
     Server Discord yang aku kelola.
   </div>
+  <div class="space"></div>
 </div></div>
 <div class="paper-box" id="socialBox"><div class="close-trigger"></div>
 <div class="box-content">
