--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:3px solid var(--accent);background-size:cover;background-position:center;flex-shrink:0;}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:8px;}
+.bio-description .about-bio p {font-size:.8rem;}
+
 </style>
 </head>
 <body>
