--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   <div class="about-text">
     <div class="about-name"></div>
     <div class="about-race"></div>
-    <div class="about-bio"></div>
+    <div class="about-bio">
+    <p>Hawrru~ ! I'm Foruxy, the Silver Catfox~</p>
+    <p>I create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!</p>
+    <p>I also help as a Vtuber Advisor, Counselor, and Helper.</p>
+    <p>I began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.</p>
+    </div>
   </div>
 </div></div>
 
