--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   <!-- Teks Penjelasan -->
   <h1>My Work</h1>
   <div class="bio-description">
-    Server Discord yang aku kelola.
+    The following are Discord servers that I created and currently manage.
   </div>
   <div class="space"></div>
 </div></div>
