--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 }
 *,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Comic Sans MS","Comic Sans",cursive;cursor:none!important;margin:0;padding:0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
-#loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:#020617;display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--accent);font-size:1.6rem;z-index:99999;transition:opacity .5s;animation: slowBlink 2.8s ease-in-out infinite;}
+#loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:#020617;display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--accent);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
 #loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
 #loadingScreen .bar{width:0%;height:100%;background:var(--accent);transition:width .1s linear;}
+.loading-text{animation: slowBlink 2.8s ease-in-out infinite;}
 .cursor{position:fixed;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,.9);mix-blend-mode:difference;pointer-events:none;z-index:9999;transform:translate(-50%,-50%);transition:width .2s,height .2s,background .2s,border .2s;}
 .cursor.magnify{width:48px;height:48px;background:rgba(255,255,255,.15);border:2px solid var(--accent);backdrop-filter:blur(6px);}
 .container{width:100%;max-width:500px;padding:30px;text-align:center;background:rgba(2,6,23,.85);backdrop-filter:blur(16px);border-radius:20px;border:1px solid rgba(255,255,255,.08);box-shadow:0 30px 70px rgba(0,0,0,.8);position:relative;z-index:1;transform:translateY(100px);opacity:0;transition:transform .8s cubic-bezier(.25,1,.5,1),opacity .8s;}
@@ -57,8 +58,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 </head>
 <body>
 
-<div id="loadingScreen">Loading...
-<div class="bar-container"><div class="bar" id="loadingBar"></div></div></div>
+<div id="loadingScreen">
+<div class="loading-text">Loading...</div><div class="bar-container"><div class="bar" id="loadingBar"></div></div></div>
 <div class="cursor"></div>
 <div class="container">
 <div class="avatar-wrapper"><div class="avatar"></div></div>
