--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 <script>
 const CONFIG={
   name:"Foruxy",
-  tagline:"Vtuber Talent Manager • Discord Server Manager",
+  tagline:"Your Partner for VTuber Servers, Moderation, and Management",
   avatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png?ex=694be2bd&is=694a913d&hm=2d4373533966d44de6acad6f1df329d26f45c25d5c8b7b5676dcb0ee8861a844&",
   aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png?ex=694c7052&is=694b1ed2&hm=e154ccb37f7f82c72dab5af72d0acb400b66f80ea0625909535a1fbe85528413&",
   aboutName:"Foruxy",
