--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ const CONFIG={
   aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png?ex=694c7052&is=694b1ed2&hm=e154ccb37f7f82c72dab5af72d0acb400b66f80ea0625909535a1fbe85528413&",
   aboutName:"Foruxy",
   aboutRace:"Silver Catfox",
-  aboutBio:"Hawrru~ ! I'm Foruxy, the Silver Catfox~\nI create Vtuber Discord servers, manage Vtuber communities, and moderate YouTube channels!\nI also help as a Vtuber Advisor, Counselor, and Helper.\nI began my journey since February 2025, I’m dedicated to supporting Vtubers and growing communities with creativity and care.",
+  aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\n I create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\n I also support as a VTuber Advisor, Counselor, and Helper.\n Since February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
   links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
