--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .paper-box.active .box-content{transform:scale(1);}
 .paper-box .close-trigger{position:absolute;top:0;left:0;width:100%;height:100%;cursor:pointer;}
 .space {margin-top: 20px;}
+#socialBox .box-content{max-width: 360px;width: 90%;padding: 20px;}
 #workContent{max-height:540px;overflow-y:auto;padding-right:20px;margin:80px auto;}
 #workContent::-webkit-scrollbar{width:0px;}
 #workContent::-webkit-scrollbar-thumb{background-color:var(--accent);border-radius:1px;}
