--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 #workContent::-webkit-scrollbar{width:0px;}
 #workContent::-webkit-scrollbar-thumb{background-color:var(--accent);border-radius:1px;}
 #workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
-.mywork-item{display:flex;gap:16px;background:rgba(56,189,248,.1);border:2px solid var(--accent);border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
+.mywork-item{display:flex;gap:16px;background:rgba(56,189,248,.1);border:2px solid #ff7a18;border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:2px solid var(--accent);flex-shrink:0;}
 .mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
 .mywork-name,.mywork-owner,.mywork-date{font-size:.9rem;}
