--- a/index.html
+++ b/index.html
@@ -4,178 +4,258 @@
 <meta charset="UTF-8">
 <title>Foruxy</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 :root{
---background-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif?ex=694dc125&is=694c6fa5&hm=7088a62c188b7a2dfefc61a8528999cfdfc782ff8b1cb91c6bf3c1080f3773f4&");
---avatar-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png?ex=694d1912&is=694bc792&hm=fcfcc7ab2ef5677ff943c32548a02ceb46195f196d2ab23912efd52fb7dac490&");
---accent:#38bdf8;
-}
-*,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Comic Sans MS","Comic Sans",cursive;cursor:none!important;margin:0;padding:0;}
-body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
-#loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:#020617;display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--accent);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
-#loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
-#loadingScreen .bar{width:0%;height:100%;background:var(--accent);transition:width .1s linear;}
-.loading-text{animation: slowBlink 2.8s ease-in-out infinite;}
-.cursor{position:fixed;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,.9);mix-blend-mode:difference;pointer-events:none;z-index:9999;transform:translate(-50%,-50%);transition:width .2s,height .2s,background .2s,border .2s;}
-.cursor.magnify{width:48px;height:48px;background:rgba(255,255,255,.15);border:2px solid var(--accent);backdrop-filter:blur(6px);}
-.container{width:100%;max-width:500px;padding:30px;text-align:center;background:rgba(2,6,23,.85);backdrop-filter:blur(16px);border-radius:20px;border:1px solid rgba(255,255,255,.08);box-shadow:0 30px 70px rgba(0,0,0,.8);position:relative;z-index:1;transform:translateY(100px);opacity:0;transition:transform .8s cubic-bezier(.25,1,.5,1),opacity .8s;}
-.container.show{transform:translateY(0);opacity:1;}
-.avatar-wrapper{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:4px;background:conic-gradient(var(--accent),#0ea5e9,var(--accent));}
-.avatar{width:100%;height:100%;border-radius:50%;border:3px solid #fff;background-image:var(--avatar-image);background-size:cover;background-position:center;}
-h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}.bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
-.link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
-.link.hover{transform:translateY(-3px) scale(1.02);box-shadow:0 15px 40px rgba(56,189,248,.35);}
-.link span{display:inline-block;font-weight:500;transition:transform .3s;}
-.link.zoom-text span{transform:scale(1.2);}
-footer{margin-top:18px;font-size:.75rem;color:#64748b;}
-.paper-box{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,.5);z-index:2;opacity:0;pointer-events:none;transition:opacity .3s;}
-.paper-box.active{opacity:1;pointer-events:auto;}
-.paper-box .box-content{background:rgba(2,6,23,.95);color:#e5e7eb;border-radius:22px;padding:26px;max-width:640px;width:100%;box-shadow:0 30px 70px rgba(0,0,0,.8);backdrop-filter:blur(16px);transform:scale(.8);transition:transform .3s;}
-.paper-box.active .box-content{transform:scale(1);}
-.paper-box .close-trigger{position:absolute;top:0;left:0;width:100%;height:100%;cursor:pointer;}
-.space {margin-top: 20px;}
-#socialBox .box-content{max-width: 360px;width: 90%;padding: 20px;}
-#workContent{max-height:540px;overflow-y:auto;padding-right:20px;margin:80px auto;}
-#workContent::-webkit-scrollbar{width:0px;}
-#workContent::-webkit-scrollbar-thumb{background-color:var(--accent);border-radius:1px;}
-#workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
-.mywork-item{display:flex;gap:16px;background:rgba(56,189,248,.1);border:2px solid #ff7a18;border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
-.mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:2px solid var(--accent);flex-shrink:0;}
-.mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
-.mywork-name,.mywork-owner,.mywork-date{font-size:.9rem;}
-.mywork-name strong,.mywork-owner strong,.mywork-date strong{color:var(--accent);}
-.about-box-content{display:flex;gap:20px;align-items:flex-start;}
-.about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:3px solid var(--accent);background-size:cover;background-position:center;flex-shrink:0;}
-.about-box-content .about-text{flex:1;color:#e5e7eb;}
-.about-box-content .about-text div{margin-bottom:8px;}
-.bio-description .about-bio p {font-size:.8rem;}
-@keyframes slowBlink {
-0%   { opacity: 1; }
-50%  { opacity: 0.4; }
-100% { opacity: 1; }
+  --background-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1452978199649714289/Muffet.gif");
+  --accent:#38bdf8;
 }
 
+*{
+  box-sizing:border-box;
+  font-family:"Comic Sans MS","Comic Sans",cursive;
+  cursor:none!important;
+  margin:0;padding:0;
+}
+
+body{
+  min-height:100vh;
+  background:
+    linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
+    var(--background-image);
+  background-size:cover;
+  background-position:center;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:#e5e7eb;
+  overflow:hidden;
+}
+
+.container{
+  width:100%;
+  max-width:500px;
+  padding:30px;
+  text-align:center;
+  background:rgba(2,6,23,.85);
+  backdrop-filter:blur(16px);
+  border-radius:20px;
+  box-shadow:0 30px 70px rgba(0,0,0,.8);
+  opacity:0;
+  transform:translateY(100px);
+  transition:.8s;
+}
+
+.container.show{
+  opacity:1;
+  transform:translateY(0);
+}
+
+/* ===== AVATAR ===== */
+.avatar-wrapper{
+  width:110px;
+  height:110px;
+  margin:0 auto 18px;
+  padding:5px;
+}
+
+.avatar{
+  width:100%;
+  height:100%;
+  background-size:cover;
+  background-position:center;
+}
+
+/* ===== LINKS ===== */
+.link{
+  display:block;
+  padding:18px;
+  margin-bottom:16px;
+  border-radius:18px;
+  background:rgba(15,23,42,.95);
+  color:#e5e7eb;
+  text-decoration:none;
+  transition:.3s;
+}
+
+.link:hover{
+  transform:translateY(-3px) scale(1.03);
+  box-shadow:0 15px 40px rgba(56,189,248,.35);
+}
+
+/* ===== OVERLAY ===== */
+.paper-box{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.5);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  opacity:0;
+  pointer-events:none;
+  transition:.3s;
+}
+
+.paper-box.active{
+  opacity:1;
+  pointer-events:auto;
+}
+
+.box-content{
+  background:rgba(2,6,23,.95);
+  padding:26px;
+  border-radius:20px;
+  max-width:640px;
+  width:90%;
+}
+
+.about-box-content{
+  display:flex;
+  gap:20px;
+}
+
+.about-avatar{
+  width:120px;
+  height:120px;
+  background-size:cover;
+  background-position:center;
+  flex-shrink:0;
+}
+
+/* ===== MY WORK ===== */
+.mywork-item{
+  display:flex;
+  gap:14px;
+  padding:12px;
+  margin-bottom:12px;
+  align-items:center;
+}
+
+.mywork-image{
+  width:100px;
+  height:100px;
+  object-fit:cover;
+}
+
+footer{
+  font-size:.75rem;
+  color:#64748b;
+  margin-top:16px;
+}
 </style>
 </head>
+
 <body>
 
-<div id="loadingScreen">
-<div class="loading-text">Loading...</div><div class="bar-container"><div class="bar" id="loadingBar"></div></div></div>
-<div class="cursor"></div>
 <div class="container">
-<div class="avatar-wrapper"><div class="avatar"></div></div>
-<h1 id="name"></h1>
-<p id="tagline"></p>
-<div id="links"></div>
-<footer>© 2025 <span id="footer-name"></span></footer>
+  <div class="avatar-wrapper">
+    <div class="avatar"></div>
+  </div>
+
+  <h1 id="name"></h1>
+  <p id="tagline"></p>
+
+  <div id="links"></div>
+  <footer>© 2025 <span id="footer-name"></span></footer>
 </div>
 
-<!-- OVERLAY BOXES -->
-<div class="paper-box" id="aboutBox"><div class="close-trigger"></div>
-<div class="box-content about-box-content">
-  <div class="about-avatar"></div>
-  <div class="about-text">
-    <div class="about-name"></div>
-    <div class="about-race"></div>
-    <div class="about-bio"></div>
+<!-- ABOUT -->
+<div class="paper-box" id="aboutBox">
+  <div class="box-content about-box-content">
+    <div class="about-avatar"></div>
+    <div>
+      <div class="about-name"></div>
+      <div class="about-race"></div>
+      <div class="about-bio"></div>
+    </div>
   </div>
-</div></div>
+</div>
 
-<div class="paper-box" id="workBox"><div class="close-trigger"></div>
-<div class="box-content" id="workContent">
-  <!-- Teks Penjelasan -->
-  <h1>My Work</h1>
-  <div class="bio-description">
-    The following are Discord servers that I created and currently manage.
+<!-- WORK -->
+<div class="paper-box" id="workBox">
+  <div class="box-content" id="workContent">
+    <h2>My Work</h2>
   </div>
-  <div class="space"></div>
-</div></div>
-<div class="paper-box" id="socialBox"><div class="close-trigger"></div>
-<div class="box-content">
-<h1>Social Media</h1>
-<div class="bio-description" style="margin-top:12px;">
-<a href="https://www.instagram.com/foruxy_/" target="_blank" class="link" style="margin-bottom:8px;"><span>📸 Instagram</span></a>
-<a href="https://x.com/Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>✖ Twitter</span></a>
-<a href="https://www.youtube.com/@Foruxy" target="_blank" class="link" style="margin-bottom:8px;"><span>▶️ Youtube</span></a>
-<a href="https://discord.com/users/797770498745303092" target="_blank" class="link" style="margin-bottom:8px;"><span>✉ Discord</span></a>
-</div></div></div>
+</div>
 
 <script>
 const CONFIG={
   name:"Foruxy",
-  tagline:"Your Partner for VTuber Servers, Moderation, and Management",
-  avatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png?ex=694d1912&is=694bc792&hm=fcfcc7ab2ef5677ff943c32548a02ceb46195f196d2ab23912efd52fb7dac490&",
-  aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png?ex=694d343d&is=694be2bd&hm=53ef8bb95657005cce648328c13de99d292f9eacbb90dcef4f57939d550ff8ef&",
-  aboutName:"Foruxy",
-  aboutRace:"Silver Catfox",
-  aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\n I create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\n I also support as a VTuber Advisor, Counselor, and Helper.\n Since February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
-  links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
+  tagline:"Your Partner for VTuber Servers",
+  avatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png",
+  aboutAvatar:"https://cdn.discordapp.com/attachments/799015739973566545/1453008094337568899/Uno.png",
+
+  borderSettings:{
+    mainAvatar:{ color:"#38bdf8", size:4, radius:"50%" },
+    aboutAvatar:{ color:"#facc15", size:3, radius:"14px" },
+    myWork:{ color:"#ff7a18", size:2, radius:"16px" }
+  },
+
+  links:[
+    {label:"✉ About Me", box:"aboutBox"},
+    {label:"💼 My Work", box:"workBox"}
+  ],
+
   myWork:[
-    {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
-    {image:"https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"},
-    {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany UM",date:"12 September 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png",name:"Kira's Aquarium🐟",owner:"Kira Maguro",date:"12 Desember 2025"},
-    {image:"https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png",name:"(Private) Clanen's Fluffytopia🍭",owner:"Clara Nefia",date:"11 Juni 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png",name:"Amaryn Pastry Shop🎂",owner:"Amaryn",date:"21 Agustus 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png",name:"Kayce Pavilion",owner:"Kayce Lawrence",date:"14 Desember 2025"},
-    {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[ 𝓚.𝓐.𝓒 ] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025"},
-    {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy",date:"27 Desember 2020"}
+    {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base"}
   ]
 };
 
-// Set avatars
-document.querySelector(".container .avatar").style.backgroundImage = `url(${CONFIG.avatar})`;
-document.querySelector(".about-avatar").style.backgroundImage = `url(${CONFIG.aboutAvatar})`;
+/* ===== BASIC DATA ===== */
+document.getElementById("name").textContent=CONFIG.name;
+document.getElementById("tagline").textContent=CONFIG.tagline;
+document.getElementById("footer-name").textContent=CONFIG.name;
 
-// Set texts
-document.getElementById("name").textContent = CONFIG.name;
-document.getElementById("tagline").textContent = CONFIG.tagline;
-document.getElementById("footer-name").textContent = CONFIG.name;
+document.querySelector(".avatar").style.backgroundImage=`url(${CONFIG.avatar})`;
+document.querySelector(".about-avatar").style.backgroundImage=`url(${CONFIG.aboutAvatar})`;
 
-// About Me texts
-document.querySelector(".about-name").textContent = `Nama: ${CONFIG.aboutName}`;
-document.querySelector(".about-race").textContent = `Race: ${CONFIG.aboutRace}`;
-document.querySelector(".about-bio").innerHTML = `Bio: ${CONFIG.aboutBio.replace(/\n/g,"<br>")}`;
+/* ===== APPLY BORDER SETTINGS ===== */
+const bs=CONFIG.borderSettings;
 
-// Set links
-const linksContainer=document.getElementById("links");
-CONFIG.links.forEach(item=>{
+// Main avatar
+const wrap=document.querySelector(".avatar-wrapper");
+wrap.style.border=`${bs.mainAvatar.size}px solid ${bs.mainAvatar.color}`;
+wrap.style.borderRadius=bs.mainAvatar.radius;
+document.querySelector(".avatar").style.borderRadius=bs.mainAvatar.radius;
+
+// About avatar
+const about=document.querySelector(".about-avatar");
+about.style.border=`${bs.aboutAvatar.size}px solid ${bs.aboutAvatar.color}`;
+about.style.borderRadius=bs.aboutAvatar.radius;
+
+// Links
+const links=document.getElementById("links");
+CONFIG.links.forEach(l=>{
   const a=document.createElement("a");
-  a.className="link"; a.href=item.url; a.innerHTML=`<span>${item.label}</span>`;
-  linksContainer.appendChild(a);
+  a.className="link";
+  a.textContent=l.label;
+  a.onclick=()=>document.getElementById(l.box).classList.add("active");
+  links.appendChild(a);
 });
 
-// Set work items
-const workContent=document.getElementById("workContent");
-CONFIG.myWork.forEach(item=>{
+// My work
+const work=document.getElementById("workContent");
+CONFIG.myWork.forEach(w=>{
   const div=document.createElement("div");
   div.className="mywork-item";
-  div.innerHTML=`<img src="${item.image}" alt="Server Discord" class="mywork-image"><div class="mywork-desc"><div class="mywork-name"><strong>Server Name:</strong> ${item.name}</div><div class="mywork-owner"><strong>Owner:</strong> ${item.owner}</div><div class="mywork-date"><strong>Creation Date:</strong> ${item.date}</div></div>`;
-  workContent.appendChild(div);
+  div.style.border=`${bs.myWork.size}px solid ${bs.myWork.color}`;
+  div.style.borderRadius=bs.myWork.radius;
+
+  div.innerHTML=`
+    <img src="${w.image}" class="mywork-image">
+    <div>${w.name}</div>
+  `;
+  div.querySelector("img").style.borderRadius=bs.myWork.radius;
+  div.querySelector("img").style.border=`${bs.myWork.size}px solid ${bs.myWork.color}`;
+  work.appendChild(div);
 });
 
-// Cursor animation
-const cursor=document.querySelector(".cursor");
-let mouseX=0,mouseY=0,currentX=0,currentY=0;
-document.addEventListener("mousemove",e=>{mouseX=e.clientX;mouseY=e.clientY;});
-function animateCursor(){currentX+=(mouseX-currentX)*.15;currentY+=(mouseY-currentY)*.15;cursor.style.left=currentX+"px";cursor.style.top=currentY+"px";requestAnimationFrame(animateCursor);}
-animateCursor();
-document.querySelectorAll(".link").forEach(btn=>{btn.addEventListener("mouseenter",()=>{btn.classList.add("hover");cursor.classList.add("magnify");});btn.addEventListener("mouseleave",()=>{btn.classList.remove("hover");btn.classList.remove("zoom-text");cursor.classList.remove("magnify");});});
+document.querySelectorAll(".paper-box").forEach(b=>{
+  b.onclick=()=>b.classList.remove("active");
+});
 
-// Overlay triggers
-const [aboutBtn,workBtn,socialBtn]=document.querySelectorAll(".link");
-const [aboutBox,workBox,socialBox]=[document.getElementById("aboutBox"),document.getElementById("workBox"),document.getElementById("socialBox")];
-aboutBtn.addEventListener("click",e=>{e.preventDefault();aboutBox.classList.add("active");});
-workBtn.addEventListener("click",e=>{e.preventDefault();workBox.classList.add("active");});
-socialBtn.addEventListener("click",e=>{e.preventDefault();socialBox.classList.add("active");});
-document.querySelectorAll(".close-trigger").forEach(trigger=>{trigger.addEventListener("click",e=>{const box=e.currentTarget.parentElement;box.classList.remove("active");if(box.id==="workBox")workContent.scrollTop=0;});});
-document.querySelectorAll(".box-content").forEach(box=>box.addEventListener("click",e=>e.stopPropagation()));
-
-// Loading screen
-const loadingScreen=document.getElementById("loadingScreen"),loadingBar=document.getElementById("loadingBar");
-let width=0,totalTime=6000,intervalTime=30,increment=100/(totalTime/intervalTime);
-const loadingInterval=setInterval(()=>{width+=increment;if(width>=100)width=100;loadingBar.style.width=width+"%";},intervalTime);
-setTimeout(()=>{clearInterval(loadingInterval);loadingScreen.style.opacity=0;setTimeout(()=>{loadingScreen.style.display="none";document.querySelector(".container").classList.add("show");},500);},totalTime);
+document.querySelector(".container").classList.add("show");
 </script>
+
 </body>
 </html>
