--- a/index.html
+++ b/index.html
@@ -343,21 +343,29 @@ document.addEventListener("mousemove",e=>{mx=e.clientX;my=e.clientY;});
   requestAnimationFrame(anim);
 })();
 
-/* ===== LOADING ===== */
-const bar=document.getElementById("loadingBar");
-let w=0;
-const i=setInterval(()=>{
-  w+=1;
-  bar.style.width=w+"%";
-  if(w>=100){
-    clearInterval(i);
-    loadingScreen.style.opacity=0;
+/* ===== LOADING SCREEN ===== */
+const loadingScreen = document.getElementById("loadingScreen");
+const loadingBar = document.getElementById("loadingBar");
+let width = 0;
+const totalTime = 6000; // durasi loading 2 detik
+const intervalTime = 40; // interval update
+const increment = 100 / (totalTime / intervalTime);
+
+const loadingInterval = setInterval(()=>{
+  width += increment;
+  if(width >= 100){
+    width = 100;
+    clearInterval(loadingInterval);
+    loadingScreen.style.opacity = 0;
     setTimeout(()=>{
-      loadingScreen.remove();
+      loadingScreen.style.display = "none";
       document.querySelector(".container").classList.add("show");
+      document.getElementById("adminToggle").style.display = "flex"; // show admin button setelah loading
     },500);
   }
-},30);
+  loadingBar.style.width = width + "%";
+}, intervalTime);
+
 </script>
 
 </body>
