--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 --avatar-image:url("https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png?ex=694d1912&is=694bc792&hm=fcfcc7ab2ef5677ff943c32548a02ceb46195f196d2ab23912efd52fb7dac490&");
 --accent:#38bdf8;
 --border-avatar-main: 3px solid #fff;
---border-avatar-about: 3px solid #FF4646;
+--border-avatar-about: 3px solid #F5F2F2;
 --border-avatar-work: 2px solid #EEEEEE;
 --border-my-work:2px solid #ff7a18;
 }
