--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   --mywork-image-outline-color:#34d399; /* Warna outline gambar di My Work */
   --mywork-image-outline-width:2px;     /* Ketebalan outline gambar di My Work */
   
-  --mywork-image-outline-color: #34d399;  /* warna outline gambar */
-  --mywork-image-outline-width: 2px;      /* ketebalan outline gambar */
+  --mywork-border-color: #34d399;  /* warna outline gambar */
+  --mywork-box-outline-width: 2px;      /* ketebalan outline gambar */
 
 }
 *,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Comic Sans MS","Comic Sans",cursive;cursor:none!important;margin:0;padding:0;}
@@ -35,7 +35,7 @@ body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)
 .container{width:100%;max-width:500px;padding:30px;text-align:center;background:rgba(2,6,23,.85);backdrop-filter:blur(16px);border-radius:20px;border:1px solid rgba(255,255,255,.08);box-shadow:0 30px 70px rgba(0,0,0,.8);position:relative;z-index:1;transform:translateY(100px);opacity:0;transition:transform .8s cubic-bezier(.25,1,.5,1),opacity .8s;}
 .container.show{transform:translateY(0);opacity:1;}
 .avatar-wrapper{width:100px;height:100px;margin:0 auto 18px;border-radius:50%;padding:var(--avatar-outline-width);background:conic-gradient(var(--avatar-outline-color), #0ea5e9, var(--avatar-outline-color));}
-.avatar{width:100%;height:100%;border-radius:50%;border:var(--avatar-outline-width) solid #fff; /* Bisa diganti kalau mau mengikuti variable */background-image:var(--avatar-image);background-size:cover;background-position:center;}
+.avatar{width:100%;height:100%;border-radius:50%;border:var(--avatar-outline-width) solid #fff;background-image:var(--avatar-image);background-size:cover;background-position:center;}
 h1{margin:0;font-size:1.7rem;font-weight:600;}p{margin:8px 0 26px;font-size:.95rem;color:#94a3b8;}.bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:12px;text-align:left;}
 .link{display:block;padding:18px;margin-bottom:16px;border-radius:18px;background:rgba(15,23,42,.95);color:#e5e7eb;text-decoration:none;border:1px solid rgba(255,255,255,.08);transform:translateY(0) scale(1);transition:transform .3s,box-shadow .3s;position:relative;cursor:pointer;}
 .link.hover{transform:translateY(-3px) scale(1.02);box-shadow:0 15px 40px rgba(56,189,248,.35);}
@@ -53,7 +53,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 #workContent::-webkit-scrollbar{width:0px;}
 #workContent::-webkit-scrollbar-thumb{background-color:var(--accent);border-radius:1px;}
 #workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
-.mywork-item{display:flex;gap:16px;background: var(--mywork-background);border:2px solid var(--mywork-border-color);border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
+.mywork-item{display:flex;gap:16px;background: var(--mywork-background);border-radius:2px;border:var(--mywork-box-outline-width) solid var(--mywork-border-color);border-radius:16px;padding:12px;align-items:center;margin-bottom:12px;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:var(--mywork-image-outline-width) solid var(--mywork-image-outline-color);flex-shrink:0;}.mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
 .mywork-name,.mywork-owner,.mywork-date{font-size:.9rem;}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong{color:var(--accent);}
