--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   --mywork-image-outline-color:#34d399; /* Warna outline gambar di My Work */
   --mywork-image-outline-width:2px;     /* Ketebalan outline gambar di My Work */
   
-  --mywork-border-color: #34d399;  /* warna outline gambar */
+  --mywork-border-color: #ff7a18;  /* warna outline gambar */
   --mywork-box-outline-width: 2px;      /* ketebalan outline gambar */
 
 }
