--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   --accent:#38bdf8;
 
   /* Variabel baru untuk outline */
-  --avatar-outline-color:#38bdf8;      /* Warna outline avatar utama */
+  --avatar-outline-color:#3898f8;      /* Warna outline avatar utama */
   --avatar-outline-width:4px;          /* Ketebalan outline avatar utama */
   
   --about-avatar-outline-color:#f87171; /* Warna outline avatar di About */
   --about-avatar-outline-width:3px;     /* Ketebalan outline avatar di About */
 
-  --mywork-image-outline-color:#34d399; /* Warna outline gambar di My Work */
+  --mywork-image-outline-color:#454747; /* Warna outline gambar di My Work */
   --mywork-image-outline-width:2px;     /* Ketebalan outline gambar di My Work */
   
-  --mywork-border-color: #ff7a18;  /* warna outline gambar */
-  --mywork-box-outline-width: 2px;      /* ketebalan outline gambar */
+  --mywork-border-color: #e9f0ef;  /* warna outline box */
+  --mywork-box-outline-width: 2px; /* ketebalan outline box */
 
 }
 *,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Comic Sans MS","Comic Sans",cursive;cursor:none!important;margin:0;padding:0;}
