--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   --accent:#38bdf8;
 
   /* Variabel baru untuk outline */
-  --avatar-outline-color:#3898f8;      /* Warna outline avatar utama */
+  --avatar-outline-color:#090933;      /* Warna outline avatar utama */
   --avatar-outline-width:4px;          /* Ketebalan outline avatar utama */
   
   --about-avatar-outline-color:#f87171; /* Warna outline avatar di About */
